* Big changes to friend requests: they now include the would-be friend's first name, last name and preferred nickname, and they are base64-encoded JSON rather than comma-separated lists. This is much more robust and extensible, except in one way: friend request codes are longer now. I think this is acceptable for what we gain. When you paste a code and click continue, you see your friend's full name and preferred nickname, rather than having to key them in for yourself * Clear session variables on logout * Abstracted session more completely, will likely move it into db and not use $_SESSION to avoid a lot of common bad PHP config issues * Refactored repeated code for outputting tab links into Template class. I'm passing the field name in $this->data rather than the value of that field for the url field. This seems a useful way to avoid chicken and egg double-escaping problems and also saves typing and discourages heavy logic in the template * Debugged Mysql::update() * Most basic level of friendslist editing (you can get rid of friends). I still need to add the ability to add them to friends groups and a way to add and remove friends groups (although I will likely keep a quick-add feature on the post page where you need it most) * Shut off the use of custom CSS files in the demo settings since I need to focus on getting main.css right for now and the first demo is behind me. I should return to this and load main.css first and a user-configured CSS file second, and use overrides rather than a complete copy for the custom styles

--- a/web/main.css
+++ b/web/main.css
@@ -228,3 +228,14 @@ form li
 {
 	font-size: 200%;
 }
+
+.friends li li
+{
+	float: left;
+	padding-right: 10px;
+}
+
+.friends li ul
+{
+	clear: left;
+}
